# MC-agent-rag

./: .gitignore  CONTEXT.md  README.md  main.ipynb  pyproject.toml
docs/: animal.md  armor.md  beacon.md  bed.md  biome.md  bow.md  brewing.md  combat.md  crafting.md  enchanting.md  experience.md  food.md  hopper.md  mining.md  monster.md  nether.md  ore.md  piston.md  potion.md  redstone.md  smelting.md  smithing.md  structure.md  sword.md  the_end.md  tools.md  trading.md  tree.md  villager.md
