[project]
name = "rag-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "google-genai>=2.10.0",
    "openai>=2.44.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.13.0",
    "html2text>=2024.2.0",
]
